--- a/mystyle.css
+++ b/mystyle.css
@@ -11,3 +11,4 @@ table {margin-bottom: 1cm;}
 p {font-size: 1.3em;/* 14px/16=0.875em */}
 table{font-size: 1.3em;/* 14px/16=0.875em */}
 ol{font-size: 1.3em;/* 14px/16=0.875em */}
+figcaption{font-size: 1.3em;/* 14px/16=0.875em */}
