--- a/mystyle.css
+++ b/mystyle.css
@@ -17,3 +17,4 @@ table{font-size: 1.3em;/* 14px/16=0.875em */}
 ol{font-size: 1.3em;/* 14px/16=0.875em */}
 figcaption{font-size: 1.3em;/* 14px/16=0.875em */}
 p.center {text-align: center}
+ul.method li{font-size: 1.3em; font-family: "Courier New"}
